# amora-data-build-tool

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  setup.py  sitemap.xml
.github/: dependabot.yml
.github/workflows/: main.yaml  pull-request.yaml  release.yaml
abbreviations/: index.html
amora/: ai.py  cli.py  compilation.py  config.py  contracts.py  dag.py  dashboards.py  feature_store.py  filters.py  manifest.py  materialization.py  meta_queries.py  models.py  module_loading.py  questions.py  setup.py  sql.py  storage.py  transformations.py  utils.py  views.py  visualization.py  watcher.py
amora/airflow/: config.py  dag.py  dags.py  operators.py
amora/cli/: ai.py  dash.py  docs.py  feature_store.py  messaging.py  models.py  shared_options.py  typer_app.py
amora/dash/: app.py  config.py  dependency_dag.py  metrics.py
assets/: profiles.yml
cli/: index.html
dbt/: dbt_project.yml
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs_src/: abbreviations.md  ai.md  cli.md  examples.md  glossary.md  index.md  models.md
examples/: index.html
features/: index.html
glossary/: index.html
models/: index.html
search/: search_index.json
tests/: conftest.py  test_ai.py  test_assertions.py  test_cli.py  test_compilation.py  test_dag.py  test_dashboards.py  test_filters.py  test_manifest.py  test_materialization.py  test_meta_queries.py  test_models.py  test_questions.py  test_sql.py  test_storage.py  test_transformations.py
(+163 files in other folders)
