[tool.poetry]
name = "self"
version = "0.1.0"
description = "Self analysis"
authors = ["diogommartins <diogommartins.dev@gmail.com>"]
license = "copyright"

[tool.poetry.dependencies]
amora = { path = "amora", develop = true }
python = "3.9.6"
pandas = "^1.3.0"
jupyter = "^1.0.0"
numpy = "^1.21.1"
matplotlib = "^3.4.2"
sqlmodel = "^0.0.4"
sqlalchemy-bigquery = "1.2.0"
networkx = {extras = ["all"], version = "^2.6.3"}
dbt = "^0.20.2"
typer = {extras = ["all"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
